--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=UTF-8>
 <title>Syncthing Chat</title>
+<script src=ChatWindow.js></script>
 
 <header>
   <h1>Syncthing Chat</h1>
