--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <meta charset=UTF-8>
 <title>Syncthing Chat</title>
-<script src=ChatWindow.js></script>
 
 <header>
   <h1>Syncthing Chat</h1>
@@ -19,4 +18,4 @@
 
 </footer>
 
-<script src>
+<script src=App.js></script>
