--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
 <meta charset=UTF-8>
 <title>Syncthing Chat</title>
+<link href=style.css rel=stylesheet>
+<body></body>
 <script src=App.js></script>
